--- a/public/home.css
+++ b/public/home.css
@@ -20,9 +20,9 @@ header {
 }
 
 .btn-pink {
-    background-color: #ff69b4; /* Color rosado */
-    color: #fff; /* Texto blanco */
-    border-color: #ff69b4; /* Borde del mismo color que el fondo */
+    background-color: #ff69b4; 
+    color: #fff; 
+    border-color: #ff69b4; 
 
 }
 
